--- a/src/app.scss
+++ b/src/app.scss
@@ -12,8 +12,6 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    //you need to setup file-loader in webpack before you can use images
-    // background: url("../../assests/image/background.png");
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -21,14 +19,13 @@ body {
     display: -webkit-flex;
     display: flex;
     -webkit-flex-direction: column;
-    //_ works with row or column_
-
     flex-direction: column;
     -webkit-align-items: center;
     align-items: center;
     -webkit-justify-content: center;
     justify-content: center;
     text-align: center;
+    @import './assets/components.scss';
 }
 
 h1 {
