--- a/src/app.scss
+++ b/src/app.scss
@@ -27,7 +27,19 @@ body {
     text-align: center;
     @import './assets/components.scss';
 }
-
+.custom-btn {
+    background-color: rgb(98, 149, 243);
+    color: white;
+    padding: 10px 20px;
+    border: 1px solid rgb(98, 149, 243);
+    border-radius: 2px;
+    cursor: pointer;
+    &:hover {
+        background-color: white;
+        color: rgb(98, 149, 243);
+    }
+    margin-left: 10px;
+}
 h1 {
     color: #fff;
     font-family: 'Open Sans', sans-serif;
@@ -45,29 +57,6 @@ h1 {
         content: '';
         font-size: 0.4em;
         text-align: center;
-    }
-}
-
-.button-line {
-    font-family: 'Open Sans', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    background: transparent;
-    border: 1px solid #fff;
-    color: #fff;
-    text-align: center;
-    font-size: 1.4em;
-    opacity: 0.8;
-    padding: 20px 40px;
-    text-decoration: none;
-    transition: all 0.5s ease;
-    margin: 0 auto;
-    display: block;
-
-    &:hover {
-        opacity: 1;
-        background-color: #fff;
-        color: grey;
     }
 }
 
