--- a/src/assets/components.scss
+++ b/src/assets/components.scss
@@ -1,8 +1,11 @@
 .step-container {
     background-color: white;
     padding: 50px;
+    box-shadow: 0px 0px 12px 1px rgba(0, 0, 0, 0.75);
+    border-radius: 2px;
     .table-view {
-        border: 1px solid gray;
+        margin-top: 10px;
+        border: 1px solid lightgray;
         padding: 20px;
         .table-row {
             padding: 5px;
@@ -12,9 +15,17 @@
             margin-bottom: 10px;
             cursor: pointer;
             &:hover {
-                background-color: rgba(13, 86, 243, 0.993);
+                background-color: rgb(98, 149, 243);
                 color: white;
             }
+        }
+        .table-row-ticket {
+            padding: 5px;
+            border-bottom: 1px solid lightblue;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 10px;
         }
     }
 }
